// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImprovementSolutions > renders empty state correctly for user with edit rights 1`] = `
<empty-view-stub
  data-v-d7bc8768=""
  description="How will you stop the problem from reoccurring?"
  descriptionrows=""
  header="Define solution"
  id="improvement-solutions-empty-view"
  imgurl="step6"
  imgwidth=""
  primarybtn="Solution"
  primarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  secondarybtn="Learn more"
  secondarybtncolor=""
  secondarybtnicon=""
  small="false"
  tertiarybtn=""
  tertiarybtnicon=""
/>
`;

exports[`ImprovementSolutions > renders empty state correctly for user without edit rights 1`] = `
<empty-view-stub
  data-v-d7bc8768=""
  description=""
  descriptionrows=""
  header="Define solution"
  id="improvement-solutions-empty-view"
  imgurl="step6"
  imgwidth=""
  primarybtn=""
  primarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  secondarybtn="Learn more"
  secondarybtncolor=""
  secondarybtnicon=""
  small="false"
  tertiarybtn=""
  tertiarybtnicon=""
/>
`;
